feat(clean, security): cleanup code, and add SSO security (uses Keycloak, cf dockercompose. You need to create realm and configure it)