@@ -5,7 +5,7 @@ import fr.jadde.resource.mapper.domain.ErrorResponse;
 import javax.ws.rs.core.Response;
 import javax.ws.rs.ext.ExceptionMapper;
 import javax.ws.rs.ext.Provider;
-import java.util.List;
+import java.util.Collections;
 import java.util.NoSuchElementException;
 
 @Provider
@@ -13,7 +13,7 @@ public class ErrorResponseMapper implements ExceptionMapper<NoSuchElementExcepti
     @Override
     public Response toResponse(final NoSuchElementException e) {
         return Response.status(404)
-                .entity(new ErrorResponse(404, List.of("Missing element").toArray(String[]::new)))
+                .entity(new ErrorResponse(404, e.getMessage(), Collections.emptyList()))
                 .build();
     }
 }
